# mingw-w64-bug-large-binary-chunk

./: CMakeLists.txt  README.md  main.cpp
